--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jshint": "^2.9.5",
     "mongodb-stitch": "^3.1.1",
     "mongoose": "^5.0.16",
+    "morgan": "^1.9.0",
     "request": "^2.85.0",
     "underscore": "^1.9.0"
   },
